@@ -1934,6 +1934,7 @@ div.comment-list .comment-meta {
 
 .widget {
   margin-bottom: 20px;
+  word-wrap: break-word;
 }
 
 .screen-reader-text {
