@@ -414,6 +414,7 @@ div.comment-list {
 .widget {
 	// padding-bottom: 20px;
 	margin-bottom: 20px;
+	word-wrap: break-word;
 	// border-bottom: 10px solid $red;
 }
 .screen-reader-text {
